# Autonomous-UAV-Damage-Detection-Simulation

./: README.md
building_inspection/: package.xml  setup.cfg  setup.py
building_inspection/building_inspection/: building_mission_node.py  camera_capture_node.py
building_inspection/test/: test_copyright.py  test_flake8.py  test_pep257.py
