<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>building_inspection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nbody@todo.todo">nbody</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs.msg</depend>
  <depend>cv_bridge</depend>
  <depend>cv2</depend>
  <depend>os</depend>
  <depend>sys</depend>
  <depend>PyQt5</depend>
  <depend>PyQt5.QtCore</depend>
  <depend>PyQt5.QtGui</depend>
  <depend>numpy</depend>
  <depend>px4_msgs.msg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
